--- a/style.css
+++ b/style.css
@@ -55,6 +55,13 @@ ul {
 	padding-bottom:50px;
 }
 
+.click {
+	font-size:22pt;
+	margin-left:360pt;
+	background-color:pink;
+	color:red;
+	
+
 }
 
 @media screen and (min-device-height:720px) and (max-device-width:1050px) {
